; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_nic.c_efx_nic_alloc_buffer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_nic.c_efx_nic_alloc_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efx_nic = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.efx_buffer = type { i32, i32, i32 }

@GFP_ATOMIC = common dso_local global i32 0, align 4
@__GFP_ZERO = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @efx_nic_alloc_buffer(%struct.efx_nic* %0, %struct.efx_buffer* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.efx_nic*, align 8
  %6 = alloca %struct.efx_buffer*, align 8
  %7 = alloca i32, align 4
  store %struct.efx_nic* %0, %struct.efx_nic** %5, align 8
  store %struct.efx_buffer* %1, %struct.efx_buffer** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.efx_nic*, %struct.efx_nic** %5, align 8
  %9 = getelementptr inbounds %struct.efx_nic, %struct.efx_nic* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %7, align 4
  %13 = load %struct.efx_buffer*, %struct.efx_buffer** %6, align 8
  %14 = getelementptr inbounds %struct.efx_buffer, %struct.efx_buffer* %13, i32 0, i32 2
  %15 = load i32, i32* @GFP_ATOMIC, align 4
  %16 = load i32, i32* @__GFP_ZERO, align 4
  %17 = or i32 %15, %16
  %18 = call i32 @dma_alloc_coherent(i32* %11, i32 %12, i32* %14, i32 %17)
  %19 = load %struct.efx_buffer*, %struct.efx_buffer** %6, align 8
  %20 = getelementptr inbounds %struct.efx_buffer, %struct.efx_buffer* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = load %struct.efx_buffer*, %struct.efx_buffer** %6, align 8
  %22 = getelementptr inbounds %struct.efx_buffer, %struct.efx_buffer* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %28, label %25

25:                                               ; preds = %3
  %26 = load i32, i32* @ENOMEM, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %4, align 4
  br label %32

28:                                               ; preds = %3
  %29 = load i32, i32* %7, align 4
  %30 = load %struct.efx_buffer*, %struct.efx_buffer** %6, align 8
  %31 = getelementptr inbounds %struct.efx_buffer, %struct.efx_buffer* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 4
  store i32 0, i32* %4, align 4
  br label %32

32:                                               ; preds = %28, %25
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @dma_alloc_coherent(i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
